--- a/src/app/shared/scss/_nav.scss
+++ b/src/app/shared/scss/_nav.scss
@@ -2,63 +2,32 @@
     margin-bottom: 0;
     z-index: 1;
     border: none;
+    text-align: right;
 
-    @media screen and (max-width: $screen-sm-max) {
-        background-color: $primary-dark;
-    }
-
-    .nav-brand {
+    .navbar-brand {
         float: left;
     }
-    .nav-brand-logo {
+
+    .navbar-brand-logo {
         color: $primary;
         line-height: 51px;
         font-size: 28px;
         letter-spacing: 2px;
         transition: 0.5s ease-in;
         text-decoration: none;
-    }
-    .nav-brand-logo:hover {
-        color: $accent-hover;
-    }
-    .nav-brand-logo.active {
-        color: $accent-hover;
-    }
 
-    ul {
-        margin: 0;
-        padding: 0;
-        text-align: right;
-
-        @media screen and (max-width: $screen-sm-max) {
-            position: absolute;
-            text-align: center;
-            top: 41px;
-            right: 0;
-            width: 100%;
-            background-color: $primary-dark;
-            overflow: hidden;
+        &:active,
+        &:hover {
+            color: $accent-hover;
         }
-    }
-
-    ul.collapse {
-        display: block;
-    }
-
-    ul.in {
-        height: 274px !important;
     }
 
     ul li {
         list-style: none;
         display: inline-block;
-
-        @media screen and (max-width: $screen-sm-max) {
-            display: block;
-        }
     }
 
-    ul li > a {
+    ul li a {
         color: $primary;
         cursor: pointer;
         font-size: 16px;
@@ -67,44 +36,15 @@
         text-decoration: none;
         text-transform: uppercase;
         transition: 0.5s all;
+
+        &:active,
+        &:hover {
+            color: $accent-hover;
+        }
     }
 
-    ul li > a:hover {
+    ul li a.is-selected {
         color: $accent-hover;
-    }
-
-    ul li > a.active {
-        color: $accent-hover;
-    }
-
-    .open > .btn-primary.dropdown-toggle {
-        background: transparent;
-        border: none;
-    }
-
-    .btn-group,
-    .btn:active,
-    .btn-group.open .dropdown-toggle {
-        box-shadow: none;
-        outline: none;
-    }
-
-    .btn-primary {
-        color: $primary;
-        font-size: 16px;
-        text-transform: uppercase;
-        padding-left: 48px;
-    }
-    .btn-primary:hover {
-        color: $accent-hover;
-    }
-
-    .btn-primary,
-    .btn-primary:active,
-    .btn-primary:hover,
-    .btn-primary:focus {
-        border-color: transparent;
-        background: transparent;
     }
 
     .fa {
@@ -115,11 +55,4 @@
         color: $primary;
         margin-top: 10px;
     }
-}
-
-.dropdown-menu li a {
-    text-transform: uppercase;
-}
-.dropdown-menu li a:hover {
-    background: $accent-hover;
 }
