--- a/src/app/shared/scss/_nav.scss
+++ b/src/app/shared/scss/_nav.scss
@@ -48,7 +48,9 @@
         color: $accent-hover;
     }
 
-    i { transition: .2s ease; }
+    i {
+        transition: 0.2s ease;
+    }
 
     .fa {
         padding: 5px;
@@ -71,14 +73,27 @@
     padding-top: 54px;
     z-index: 1;
     overflow: hidden;
-    transition: width .5s ease;
+    transition: width 0.5s ease;
 
     ul {
-
+        text-align: center;
+        margin-top: 64px;
     }
 
     ul li {
         list-style: none;
+        padding-bottom: 32px;
+        font-size: 18px;
+        text-transform: uppercase;
+    }
+
+    a {
+        color: $primary;
+
+        &:hover,
+        &:focus {
+            text-decoration: none;
+        }
     }
 }
 
@@ -86,79 +101,62 @@
     width: 100%;
 }
 
- #nav-icon3 {
-  width: 23px;
-  height: 15px;
-  right: 0;
-  margin-top: 15px;
-  margin-right: 10px;
-  position: absolute;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
+.mobile-hamburger {
+    width: 23px;
+    height: 15px;
+    right: 0;
+    margin-top: 15px;
+    margin-right: 17px;
+    position: absolute;
+    cursor: pointer;
+
+    @include rotate(0deg);
+    @include transition(0.5s ease-in-out);
 }
 
- #nav-icon3 span {
-  display: block;
-  position: absolute;
-  height: 3px;
-  width: 100%;
-  background: #d3531a;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+.mobile-hamburger span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: $primary;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+
+    @include rotate(0deg);
+    @include transition(0.25s ease-in-out);
 }
 
-
-
-#nav-icon3 span:nth-child(1) {
-  top: 0px;
+.mobile-hamburger span:nth-child(1) {
+    top: 0;
 }
 
-#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
-  top: 6px;
+.mobile-hamburger span:nth-child(2),
+.mobile-hamburger span:nth-child(3) {
+    top: 6px;
 }
 
-#nav-icon3 span:nth-child(4) {
-  top: 12px;
+.mobile-hamburger span:nth-child(4) {
+    top: 12px;
 }
 
-#nav-icon3.open span:nth-child(1) {
-  top: 6px;
-  width: 0%;
-  left: 50%;
+.mobile-hamburger.is-open span:nth-child(1) {
+    top: 6px;
+    width: 0;
+    left: 50%;
 }
 
-#nav-icon3.open span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
+.mobile-hamburger.is-open span:nth-child(2) {
+    @include rotate(45deg);
 }
 
-#nav-icon3.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+.mobile-hamburger.is-open span:nth-child(3) {
+    @include rotate(-45deg);
 }
 
-#nav-icon3.open span:nth-child(4) {
-  top: 6px;
-  width: 0%;
-  left: 50%;
+.mobile-hamburger.is-open span:nth-child(4) {
+    top: 6px;
+    width: 0;
+    left: 50%;
 }
