--- a/src/main.css
+++ b/src/main.css
@@ -3672,17 +3672,17 @@ section {
     color: #D75C37; }
   /* line 51, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar i {
-    transition: .2s ease; }
-  /* line 53, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+    transition: 0.2s ease; }
+  /* line 55, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .fa {
     padding: 5px; }
-  /* line 57, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 59, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .fa-lg {
     border: 1px solid #FFFFFF;
     color: #FFFFFF;
     margin-top: 10px; }
 
-/* line 64, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+/* line 66, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
 .mobile-nav {
   position: absolute;
   right: 0;
@@ -3694,87 +3694,100 @@ section {
   z-index: 1;
   overflow: hidden;
   transition: width 0.5s ease; }
-  /* line 80, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 78, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  .mobile-nav ul {
+    text-align: center;
+    margin-top: 64px; }
+  /* line 83, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .mobile-nav ul li {
-    list-style: none; }
+    list-style: none;
+    padding-bottom: 32px;
+    font-size: 18px;
+    text-transform: uppercase; }
+  /* line 90, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  .mobile-nav a {
+    color: #FFFFFF; }
+    /* line 94, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+    .mobile-nav a:hover,
+    .mobile-nav a:focus {
+      text-decoration: none; }
 
-/* line 85, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+/* line 100, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
 .mobile-nav.is-shown {
   width: 100%; }
 
-/* line 89, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3 {
+/* line 104, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+.mobile-hamburger {
   width: 23px;
   height: 15px;
   right: 0;
   margin-top: 15px;
-  margin-right: 10px;
+  margin-right: 17px;
   position: absolute;
+  cursor: pointer;
   -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer; }
+  -webkit-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out; }
 
-/* line 107, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3 span {
+/* line 117, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+.mobile-hamburger span {
   display: block;
   position: absolute;
   height: 3px;
   width: 100%;
-  background: #d3531a;
+  background: #FFFFFF;
   border-radius: 9px;
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out; }
+  -webkit-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out; }
 
-/* line 128, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3 span:nth-child(1) {
-  top: 0px; }
-
-/* line 132, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3 span:nth-child(2), #nav-icon3 span:nth-child(3) {
-  top: 6px; }
+/* line 131, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+.mobile-hamburger span:nth-child(1) {
+  top: 0; }
 
 /* line 136, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3 span:nth-child(4) {
-  top: 12px; }
+.mobile-hamburger span:nth-child(2),
+.mobile-hamburger span:nth-child(3) {
+  top: 6px; }
 
 /* line 140, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3.open span:nth-child(1) {
+.mobile-hamburger span:nth-child(4) {
+  top: 12px; }
+
+/* line 144, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+.mobile-hamburger.is-open span:nth-child(1) {
   top: 6px;
-  width: 0%;
+  width: 0;
   left: 50%; }
 
-/* line 146, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3.open span:nth-child(2) {
+/* line 150, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+.mobile-hamburger.is-open span:nth-child(2) {
   -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg); }
 
-/* line 153, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3.open span:nth-child(3) {
+/* line 154, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+.mobile-hamburger.is-open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg); }
 
-/* line 160, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-#nav-icon3.open span:nth-child(4) {
+/* line 158, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+.mobile-hamburger.is-open span:nth-child(4) {
   top: 6px;
-  width: 0%;
+  width: 0;
   left: 50%; }
 
 /* line 1, /Users/David/Desktop/git/resume/src/app/shared/scss/_circle.scss */
